--- a/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
+++ b/roadmap/v0.10-agent-sdk/p2.1-session-contracts.md
@@ -1,7 +1,7 @@
 # P2.1: Session Contracts and Core `aos.agent/*` Schemas
 
 **Stage**: P2.1  
-**Status**: In Progress (core lifecycle + settle/stale semantics landed)  
+**Status**: Complete (verified on 2026-02-14)  
 **Depends on**: P1 complete
 
 ## Implementation Progress (2026-02-13)
@@ -43,10 +43,13 @@ Completed:
    - lease-expiry cancellation path,
    - replay parity after multi-run lifecycle progression.
 
-Remaining for full P2.1 completion:
-
-1. Add explicit dedicated smoke assertion for lease heartbeat renewal (not just expiry).
-2. Add one high-contention multi-batch/multi-receipt scenario to harden fan-in behavior under heavier ordering permutations.
+11. Added dedicated lease-heartbeat renewal smoke coverage:
+   - `LeaseHeartbeat` keeps run active through pre-deadline checks,
+   - deterministic cancellation only after renewed heartbeat deadline passes.
+12. Added high-contention multi-batch fan-in smoke coverage:
+   - out-of-order settlements,
+   - duplicate receipt idempotency,
+   - stale receipt classification (`IgnoredStale`) under heavy ordering permutations.
 
 ## Purpose
 
@@ -380,4 +383,4 @@ Rules:
 7. Replay test proves byte-identical final state for equivalent journal.
 8. P2.1 end-to-end coverage executes via `aos-smoke` fixtures (no separate SDK-local e2e runner).
 
-Status note (2026-02-13): implementation now satisfies #1, #2, #3, #4, #5, #7, #8 and the lease-expiry portion of #6. A dedicated heartbeat-renewal coverage assertion remains open.
+Status note (2026-02-14): implementation satisfies all exit criteria (#1-#8), including dedicated heartbeat-renewal coverage and high-contention multi-batch fan-in smoke assertions.
