--- a/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
@@ -98,9 +98,9 @@ not as profile-registry choreography and not as SDK-local ownership of core `sys
 1. [x] Clean SDK AIR assets to remove profile/catalog schemas and reducer routing.
 2. [x] Implement core-side `sys/Llm*` evolution in `spec/defs` + runtime crates.
 3. [x] Implement SDK mapper flow on top.
-4. [ ] Add integration tests proving:
+4. [x] Add integration tests proving:
    - core adapter remains agent-agnostic,
    - SDK deterministically maps run/step state into core params,
    - replay determinism is preserved.
 
-Status note (2026-02-13): SDK mapper helpers, mapper unit assertions (including optional runtime fields), and expanded session smoke replay coverage are in place. A consolidated integration assertion set for all three bullets above remains open.
+Status note (2026-02-14): consolidated integration assertions are in place across `aos-agent-sdk` mapper tests, `aos-host` adapter request-path integration tests, and `aos-smoke` deterministic replay coverage.
