--- a/roadmap/v0.10-agent-sdk/p2.2-llm-contract-direct-provider-model.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-llm-contract-direct-provider-model.md
@@ -1,7 +1,7 @@
 # P2.2: Direct Provider/Model LLM Contract Evolution
 
 **Stage**: P2.2  
-**Status**: In Progress (mapper + deterministic boundary coverage expanded)  
+**Status**: Complete (verified on 2026-02-14)  
 **Depends on**: P2.1
 
 ## Implementation Progress (2026-02-13)
@@ -27,11 +27,15 @@ Completed:
    - verifies `provider_options_ref`/`response_format_ref` survive mapper materialization into core params,
    - verifies omitted optional runtime controls stay unset (`max_tokens`, `reasoning_effort`, runtime refs) for deterministic defaulting behavior.
 
-Remaining:
-
-1. Add/confirm provider-adapter integration coverage that mapper-emitted runtime refs round-trip through provider request execution paths.
-2. Add explicit deterministic `unknown provider/model` run-start failure coverage under SDK-driven flow (no partial activation).
-3. Close any remaining P2.2-specific conformance assertions across cap enforcer/runtime tests.
+8. Added deterministic adapter integration coverage for runtime-ref roundtrip:
+   - verifies `provider_options_ref` + `response_format_ref` materialize into provider request body in `crates/aos-host/tests/adapters_llm_integration.rs`.
+9. Added deterministic SDK catalog-preflight failure coverage:
+   - `apply_session_event_with_catalog` rejects unknown provider/model before partial activation,
+   - unit assertions verify no state mutation on rejected run start.
+10. Closed remaining deterministic P2.2 assertion set by combining:
+    - mapper-materialization unit coverage (`aos-agent-sdk`),
+    - adapter request-path integration coverage (`aos-host`),
+    - replay-stable SDK smoke coverage (`aos-smoke agent-session`).
 
 ## Ownership Boundary (Authoritative)
 
@@ -266,7 +270,7 @@ Any in-run change request is deferred to the next run (or rejected by policy).
 4. SDK mapper helpers from run/step state into core `sys/LlmGenerateParams@1`.
 5. Manifest/cap/policy updates aligned to direct provider/model run config.
 
-Status note (2026-02-13): Deliverable #4 is implemented and mapper-level acceptance coverage is expanded; remaining work is provider-path integration completion and explicit unknown provider/model start-failure coverage.
+Status note (2026-02-14): provider-path integration coverage and explicit unknown provider/model start-failure coverage are implemented; deterministic P2.2 closure assertions are complete.
 
 ## Exit Criteria
 
