--- a/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
+++ b/roadmap/v0.10-agent-sdk/p2.2-llm-boundary-issue.md
@@ -1,7 +1,9 @@
 # P2.2 LLM Boundary Issue: `sys/*` vs `aos.agent/*`
 
 **Date**: 2026-02-13  
-**Status**: Accepted; roadmap rebaseline applied on 2026-02-13 (cleanup complete, mapper + deterministic session boundary slice landed)
+**Status**: Closed (completed on 2026-02-14)
+
+Closure note (2026-02-14): all cleanup tasks and resume checklist items are complete, with integration coverage in place across SDK mapper tests, host adapter request-path tests, and deterministic smoke replay.
 
 ## Summary
 
