--- a/roadmap/v0.10-agent-sdk/p2.3-tool-loop-safety-context-bounds.md
+++ b/roadmap/v0.10-agent-sdk/p2.3-tool-loop-safety-context-bounds.md
@@ -1,37 +1,55 @@
 # P2.3: Tool Loop Safety, Limits, and Context Bounds
 
 **Stage**: P2.3  
-**Status**: Proposed  
+**Status**: Complete (MVP slice verified on 2026-02-14)  
 **Depends on**: P2.1, P2.2
 
 ## Purpose
 
-Lock down runtime safety and context discipline for tool-using agent loops.
+Keep only the minimum safety needed to ship a first working agent loop.
 
-P2.1 remains the source of truth for base lease, batch, and pause/resume/cancel contracts; this stage adds limits/policy on top.
+P2.1 remains the source of truth for lease, batch settle, and pause/resume/cancel semantics.  
+This stage is intentionally thin and avoids heavy policy until the base agent flow is stable.
+
+## Implementation Progress (2026-02-14)
+
+Completed:
+
+1. Added minimal runtime limits contract in SDK helpers:
+   - `SessionRuntimeLimits { max_steps_per_run: Option<u64> }`.
+2. Added deterministic step-cap enforcement path:
+   - `apply_session_event_with_limits`,
+   - `apply_session_event_with_catalog_and_limits`.
+3. Added per-run deterministic step counter in session state:
+   - `active_run_step_count`.
+4. Added SDK unit coverage for cap-triggered fail-and-clear behavior.
+5. Expanded smoke fixture `10-agent-session` with a runaway loop scenario proving deterministic stop on step-cap breach, while preserving replay parity.
 
 ## Scope
 
-1. Canonical stop/limit semantics:
+1. Keep one emergency runaway guard:
+   - `max_steps_per_run` only.
+2. Keep current P2.1 semantics as-is:
+   - lease heartbeat/expiry path,
+   - deterministic batch settle/fan-in.
+3. Keep tool output contract unchanged for MVP:
+   - no truncation pipeline changes,
+   - no dual-channel output split.
+
+## Deferred (Post-MVP)
+
+1. Multi-dimensional limits:
    - max turns,
    - max tool rounds per turn,
-   - max steps per run,
    - max tool calls per step,
-   - max in-flight tool/effect calls per run.
-2. Loop detection contract:
-   - deterministic signature model,
-   - thresholds and reaction policy (`inject_steer`, `fail`, `complete_with_warning`).
-3. Tool output bounding contract:
-   - full-fidelity operator output retained in CAS,
-   - bounded model-context output retained separately,
-   - deterministic truncation marker with digest.
-4. Context pressure signaling:
-   - standardized threshold events (for example 70/85/95%).
-5. Long-run liveness policy over the P2.1 lease contract:
-   - lease timeout thresholds,
-   - deterministic lease-expiry reaction policy.
-6. Parallel tool round pressure policy over the P2.1 settle contract:
-   - backpressure behavior as in-flight counts approach configured ceilings.
+   - max in-flight effects backpressure.
+2. Loop signature detection and automatic loop policy actions.
+3. Context pressure thresholds/events.
+4. Tool output bounding/truncation metadata:
+   - `operator_output_ref`,
+   - `model_output_ref`,
+   - `truncation_meta`.
+5. Any token/cost budgeting policy.
 
 ## Non-Goals
 
@@ -40,31 +58,23 @@ P2.1 remains the source of truth for base lease, batch, and pause/resume/cancel 
 
 ## Deliverables
 
-1. SDK types for limits, loop policy, truncation metadata.
-2. Reducer helper logic for limit checks and loop detection.
-3. Tool result envelope schema additions:
-   - `operator_output_ref`
-   - `model_output_ref`
-   - `truncation_meta`
-4. Deterministic truncation helper in `aos-agent-sdk`.
-5. Liveness policy helpers built on P2.1 lease primitives.
-6. Backpressure helpers built on P2.1 batch-settle primitives.
+1. Minimal SDK/runtime setting for `max_steps_per_run` (optional, relaxed default).
+2. Reducer helper for deterministic step-cap enforcement.
+3. One smoke scenario proving runaway loop is stopped deterministically.
+4. Explicit deferred-list documentation to avoid accidental scope creep.
 
 ## Implementation Notes
 
-- Replace app-local truncation constants (for example Demiurge reducer hardcoded limits) with SDK-level policy input.
+- Default behavior should be permissive so normal agent runs are not blocked.
+- Step-cap should be high and used as a circuit breaker, not day-to-day control.
 - Preserve reducer/plan boundaries:
-  - reducer decides loop/state transitions,
-  - plan and adapters execute tool/LLM effects.
-- Receipt ingestion order must not affect settled batch result ordering; normalize by tool call id.
-- Backpressure must be deterministic: when `in_flight_effects >= max_in_flight_effects`, reducer defers additional fan-out until receipts reduce in-flight count.
+  - reducer decides stop transition on cap breach,
+  - plans/adapters remain effect executors.
+- Do not add truncation, context-pressure, or loop-signature machinery in this slice.
 
 ## Exit Criteria
 
-1. Long tool output is deterministically truncated with stable marker/digest.
-2. Full output remains available to operator channel via CAS.
-3. Limit exceed paths produce canonical terminal reasons.
-4. Loop detection triggers configured policy and avoids infinite ineffective cycles.
-5. Lease expiry deterministically transitions run to cancellation path.
-6. Parallel fan-out/fan-in waits for full batch settle before next LLM step.
-7. Replay test verifies identical terminal state and bounded payload refs.
+1. Happy-path tool-using agent run works with no new operational friction.
+2. Runaway loop can be deterministically stopped by `max_steps_per_run`.
+3. Replay parity remains intact for both normal and cap-triggered runs.
+4. Deferred items stay deferred; no hidden partial implementations land in MVP.
