--- a/roadmap/v0.10-agent-sdk/p2.4-events-observability-contract.md
+++ b/roadmap/v0.10-agent-sdk/p2.4-events-observability-contract.md
@@ -1,65 +1,82 @@
-# P2.4: Event and Observability Contract
+# P2.4: Event and Observability Contract (Boundary-Safe Slice)
 
 **Stage**: P2.4  
-**Status**: Proposed  
+**Status**: Proposed (re-scoped on 2026-02-14)  
 **Depends on**: P2.1, P2.2, P2.3
 
 ## Purpose
 
-Make agent events a stable API for UIs and headless automation, not ad hoc debug output.
+Make agent observability stable for UI/headless consumers while preserving AOS boundaries:
 
-This stage resolves concern #5.
+- **Authoritative truth remains** journal + reducer state + receipts.
+- **No new app-level kernel primitive** is introduced.
+- Any convenience view is an **edge projection** (host/CLI/UI), never kernel truth.
+
+This stage resolves concern #5 without moving application concerns into the kernel.
+
+## Boundary Rules (Normative)
+
+1. Kernel and journal stay generic and authoritative.
+2. `aos.agent/SessionEvent@1` remains the internal session lifecycle contract.
+3. Any "agent timeline" representation is derived from journal/state at read time.
+4. Edge projections must carry source pointers (`journal_seq`, `event_hash`/`intent_hash`) back to authoritative records.
+5. No projection may be required for replay correctness or runtime semantics.
 
 ## Scope
 
-1. Define canonical SDK event schema:
-   - `aos.agent/AgentEvent@1`
-2. Required event fields:
-   - `session_id`, `run_id`, `turn_id`, `step_id`,
-   - `event_seq`,
-   - `correlation_id`,
-   - `causation` (event hash or intent hash).
-3. Canonical event families:
-   - lifecycle,
-   - llm step,
-   - tool call,
-   - host control,
-   - diagnostics.
-4. Ordering/correlation guarantees:
+1. Document a stable **observability contract** over existing surfaces:
+   - `/api/journal`,
+   - `/api/debug/trace`,
+   - CLI trace commands.
+2. Define deterministic ordering and cursor semantics for consumers:
    - durable order = journal order,
-   - telemetry order = best effort with cursor metadata.
-5. Payload channel policy:
-   - bounded model channel,
-   - full-fidelity operator channel.
-6. Internal/external event mapping contract:
-   - `SessionEvent@1` as reducer input/internal lifecycle event,
-   - `AgentEvent@1` as external API/stream surface.
+   - resume rules and duplicate-handling rules are explicit.
+3. Define correlation contract for agent session workflows:
+   - required identity lineage fields (`session_id`, `run_id`, `turn_id`, `step_id`) where applicable,
+   - correlation/causation lookup rules via existing hashes and trace outputs.
+4. Optionally define a **host-local projected view** for ergonomics:
+   - read-model only,
+   - not an AIR/kernel schema requirement,
+   - explicitly non-authoritative.
+5. Validate one UI path and one headless path against the contract.
 
 ## Non-Goals
 
-- New kernel primitives for streaming.
-- Product-level UI decisions.
+- New kernel primitives for streaming or event families.
+- Treating a projected view as source of truth.
+- Replacing raw journal/debug-trace APIs.
+- Product-level UI design decisions.
 
 ## Deliverables
 
-1. `AgentEvent` schema family and versioning policy.
-2. Event emission helpers in `aos-agent-sdk`.
-3. Contract notes for HTTP/SSE surfaces (cursor, resume, duplicate handling).
-4. Trace/correlation rules aligned with existing `trace-get` workflow.
-5. Deterministic mapping spec from `SessionEvent@1` and journal entries to `AgentEvent@1`.
+1. P2.4 contract doc defining:
+   - ordering,
+   - cursor/resume,
+   - dedupe behavior,
+   - correlation/causation fields,
+   - source-pointer requirements.
+2. Surface-level consistency pass:
+   - align `from`/cursor semantics across HTTP and CLI docs/help text.
+3. Contract notes for projected read-models (if exposed):
+   - host/CLI/UI only,
+   - include source linkage back to journal records.
+4. Integration tests proving:
+   - resume from cursor without durable duplication,
+   - no missing required correlation fields in agent-session flows,
+   - replay-stable consumer interpretation.
 
 ## Implementation Notes
 
-- Align with `roadmap/v0.10-agent-sdk/p9-stream.md` but keep deterministic boundaries explicit: journal-derived events are authoritative.
-- Ensure every externally visible transition maps to a canonical event kind.
-- `AgentEvent@1.event_seq` must be monotonic within `(session_id, run_id)` by journal order.
-- `AgentEvent@1.correlation_id` should equal run-scoped correlation id for all events in one run unless explicitly forked by tool call id.
+- Reuse existing observability substrate from v0.9 Demiurge debug work (`journal-list`, `trace-get`, HTTP debug trace, CLI trace tools).
+- Keep `roadmap/v0.10-agent-sdk/p9-stream.md` separate: transport can evolve independently from authoritative event semantics.
+- If a projected endpoint is added, frame it as a convenience wrapper over journal-derived data, with explicit "non-authoritative" wording.
+- Prefer incremental contract hardening over new schema families.
 
 ## Exit Criteria
 
-1. A headless consumer can reconstruct run progression from the event stream plus journal cursor.
-2. No required correlation field is missing in integration tests.
-3. Resume-from-cursor works without duplication of durable events.
-4. Event schema evolution policy documented (additive changes, version bump rules).
-5. `SessionEvent@1 -> AgentEvent@1` mapping is complete for every externally visible transition.
-6. Event contract validated in at least one UI integration path and one headless harness.
+1. A headless consumer can reconstruct agent run progression from journal/trace surfaces with documented cursor rules.
+2. Resume-from-cursor behavior is deterministic and tested for duplicate handling.
+3. Required correlation/lineage fields for agent session debugging are documented and present in integration coverage.
+4. Replay of the same journal yields identical consumer-visible terminal interpretation.
+5. At least one UI path and one headless harness operate on the documented contract without bespoke parsing assumptions.
+6. No kernel/AIR additions are required to satisfy P2.4.
