--- a/roadmap/v0.10-agent-sdk/p2.4-events-observability-contract.md
+++ b/roadmap/v0.10-agent-sdk/p2.4-events-observability-contract.md
@@ -71,6 +71,11 @@ This stage resolves concern #5 without moving application concerns into the kern
 - Keep `roadmap/v0.10-agent-sdk/p9-stream.md` separate: transport can evolve independently from authoritative event semantics.
 - If a projected endpoint is added, frame it as a convenience wrapper over journal-derived data, with explicit "non-authoritative" wording.
 - Prefer incremental contract hardening over new schema families.
+- Cursor contract for current journal APIs:
+  - `from` is a journal cursor sequence.
+  - Consumers resume by passing the last processed `seq` from the previous page.
+  - Ordering is strictly by `seq` ascending.
+  - Bootstrap note: on worlds without a baseline snapshot, `from=0` includes `seq=0`.
 
 ## Exit Criteria
 
