--- a/roadmap/v0.10-agent-sdk/p2.4-events-observability-contract.md
+++ b/roadmap/v0.10-agent-sdk/p2.4-events-observability-contract.md
@@ -1,7 +1,7 @@
 # P2.4: Event and Observability Contract (Boundary-Safe Slice)
 
 **Stage**: P2.4  
-**Status**: Proposed (re-scoped on 2026-02-14)  
+**Status**: Complete (boundary-safe slice verified on 2026-02-14)  
 **Depends on**: P2.1, P2.2, P2.3
 
 ## Purpose
@@ -13,6 +13,27 @@ Make agent observability stable for UI/headless consumers while preserving AOS b
 - Any convenience view is an **edge projection** (host/CLI/UI), never kernel truth.
 
 This stage resolves concern #5 without moving application concerns into the kernel.
+
+## Implementation Progress (2026-02-14)
+
+Completed:
+
+1. Re-scoped P2.4 to a boundary-safe contract slice:
+   - no kernel/AIR app-level event primitive added,
+   - journal/state/receipts remain authoritative.
+2. Documented explicit cursor contract for journal-based consumers:
+   - `from` as cursor sequence,
+   - resume using last processed `seq`,
+   - ascending durable order and bootstrap note.
+3. Aligned surface docs/help text with cursor semantics:
+   - HTTP journal query docs (`/api/journal`),
+   - CLI `journal tail --from` help text.
+4. Added integration coverage for cursor resume and duplicate handling:
+   - control-path pagination reconstruction with no durable duplicates,
+   - HTTP-path cursor forwarding and no-dup pagination behavior.
+5. Added integration coverage for agent lineage/correlation fields:
+   - session-style lineage fields validated through `trace-get` correlation mode (`session_id`, `run_id`, `turn_id`, `step_id`).
+6. Confirmed replay-stable terminal interpretation remains covered by existing host replay test (`trace terminal classification matches after replay`).
 
 ## Boundary Rules (Normative)
 
