--- a/roadmap/v0.10-agent-sdk/p2.5-failure-retry-cancel.md
+++ b/roadmap/v0.10-agent-sdk/p2.5-failure-retry-cancel.md
@@ -1,78 +1,95 @@
-# P2.5: Failure Taxonomy, Retry Ownership, and Cancellation
+# P2.5: Failure Taxonomy, Retry Ownership, and Cancellation (MVP Slice)
 
 **Stage**: P2.5  
-**Status**: Proposed  
+**Status**: Proposed (re-scoped on 2026-02-14)  
 **Depends on**: P2.1, P2.2, P2.3, P2.4
 
 ## Purpose
 
-Define shared failure semantics so identical failures produce identical behavior across apps.
+Define only the minimum shared failure contract needed so equivalent failures produce equivalent behavior across apps today.
 
-This stage resolves concern #6 and finalizes cancellation semantics from concern #4.
-P2.1 remains the base source of truth for lifecycle and in-flight cancellation fences; this stage hardens taxonomy and retry ownership around that contract.
+P2.1 remains the source of truth for lifecycle/cancel fences. This stage adds a small, explicit failure-code and retry-ownership contract on top of existing behavior.
 
-## Scope
+## Already In Place
 
-1. Canonical failure taxonomy:
-   - policy denial,
-   - capability denial,
-   - validation error,
-   - adapter timeout/error,
-   - provider retryable/terminal error,
-   - tool not found/invalid args,
-   - invariant violation.
-2. Retry ownership boundaries:
-   - adapter retries,
-   - plan retries,
-   - reducer decision retries.
-3. Canonical terminal states and transition rules:
-   - `Completed`, `Failed`, `Cancelled`.
-4. Cancellation ordering contract:
-   - accepted cancel command,
-   - `Cancelling`,
-   - late-result ignore,
-   - `Cancelled`.
-5. In-flight parallel effect handling:
-   - partial completion classification,
-   - deterministic settle on cancel.
+1. Deterministic cancellation fence behavior:
+   - `Cancelling` transition,
+   - `session_epoch` + `step_epoch` bump,
+   - stale late results marked `IgnoredStale`,
+   - deterministic finalize to `Cancelled`.
+2. Terminal lifecycle states and base events:
+   - `Completed`, `Failed`, `Cancelled`,
+   - `RunFailed { code, detail }`,
+   - `RunCancelled { reason }`.
+3. Host adapter failure normalization:
+   - transport-level failures surfaced as receipt `Error`/`Timeout`.
+4. Trace-level classification substrate:
+   - deny/error/timeout/plan-error signals already queryable.
+
+## Scope (Land Now)
+
+1. Canonical failure code vocabulary (string codes):
+   - `policy_denied`,
+   - `capability_denied`,
+   - `validation_error`,
+   - `adapter_timeout`,
+   - `adapter_error`,
+   - `provider_retryable`,
+   - `provider_terminal`,
+   - `tool_not_found`,
+   - `tool_invalid_args`,
+   - `invariant_violation`,
+   - `unknown_failure`.
+2. Retry ownership contract (single-owner rule):
+   - adapter owns transport retries only,
+   - plan owns orchestration/effect re-dispatch retries,
+   - reducer owns state-machine retry decisions,
+   - one failure class in one path has exactly one retry owner.
+3. Minimal SDK helper surface:
+   - helper mapping from observed signals (receipt/deny/plan error) to canonical failure codes,
+   - helper constructors for deterministic `RunFailed`/tool-failed statuses using canonical codes.
+4. Conformance tests:
+   - deny/error/timeout class mapping tests,
+   - cancel during in-flight fan-out with partial completion,
+   - replay parity for failed/cancelled paths and classifications.
+
+## Deferred (Post-MVP)
+
+1. New error envelope schema family.
+2. Automatic retry orchestration framework (backoff strategies, retry budget engine).
+3. Cross-world cancellation protocol.
+4. Budget/economics policy integration.
+5. Full provider-specific failure taxonomy expansion beyond MVP codes.
 
 ## Non-Goals
 
-- Cross-world cancellation protocols (universe work).
-- Budget/economics policy (future stage).
+- New kernel primitives for failure handling.
+- Moving app-specific retry loops into kernel/runtime internals.
+- Replacing existing journal/trace truth with a new failure stream.
 
 ## Deliverables
 
-1. Error envelope schema with structured cause + correlation.
-2. Retry policy guidance and helper interfaces in `aos-agent-sdk`.
-3. Cancellation sequence rules and epoch-fence enforcement helpers.
-4. Integration tests for deny/error/timeout/cancel behavior.
-5. Integration tests for partial parallel completion and cancel during fan-out.
+1. Documented canonical failure code list and mapping guidance.
+2. Documented retry ownership matrix (adapter vs plan vs reducer).
+3. Small `aos-agent-sdk` helper functions for deterministic code mapping/construction.
+4. Integration tests covering:
+   - policy/cap deny distinction,
+   - adapter timeout/error distinction,
+   - cancel + stale late result behavior during fan-out,
+   - replay-stable failed/cancelled interpretation.
 
 ## Implementation Notes
 
-- Keep all retry/cancel effects deterministic at reducer decision level.
-- Avoid hidden retry loops inside app-specific code paths.
-- Adapter retries are transport-level only and must not duplicate a committed tool call id.
-- Plan retries own effect re-dispatch policy; reducer retries own state-transition policy.
-- At most one layer may retry a given failure class in a given path (single owner rule).
-
-### Cancellation sequence (conformance; must match P2.1 contract)
-
-1. Host command accepted and journaled with `command_id`.
-2. Reducer transitions to `Cancelling` and bumps both `session_epoch` and `step_epoch`.
-3. No new effect intents are emitted after transition to `Cancelling`.
-4. In-flight receipts are ingested:
-   - matching epoch/run: mark call terminal (`Succeeded` or `Failed`),
-   - stale epoch/run: mark `IgnoredStale`.
-5. Run transitions to `Cancelled` when all call ids in active batch are terminal or ignored stale.
-6. Terminal event includes typed cancellation cause and correlation ids.
+- Keep failure handling deterministic at reducer-decision level.
+- Avoid hidden retries in multiple layers for the same failure class.
+- Preserve P2.1 cancellation ordering and fence behavior exactly.
+- Use existing journal/trace surfaces for validation and diagnostics rather than introducing a new authoritative channel.
 
 ## Exit Criteria
 
-1. Each failure class maps to deterministic terminal or recoverable behavior.
-2. Retry ownership is tested and unambiguous (no duplicate retry loops across layers).
-3. Cancel during in-flight operations reaches `Cancelled` deterministically and ignores stale late completions.
-4. Policy/cap deny paths are distinguishable by typed error code and correlation IDs.
-5. Partial-success/partial-failure fan-out during cancellation produces deterministic final classification.
-6. Replay parity holds for failed and cancelled runs.
+1. Canonical failure codes are documented and used consistently in SDK-facing failure paths.
+2. Retry ownership is explicit and tested (no duplicate retry loops across layers for the same failure class/path).
+3. Cancel during in-flight operations deterministically reaches `Cancelled` with stale late completions ignored.
+4. Policy/cap deny and adapter timeout/error paths are distinguishable by canonical code.
+5. Replay parity holds for failed and cancelled runs, including classification interpretation.
+6. No kernel/AIR primitive additions are required for this MVP slice.
