--- a/roadmap/v0.10-agent-sdk/p2.5-failure-retry-cancel.md
+++ b/roadmap/v0.10-agent-sdk/p2.5-failure-retry-cancel.md
@@ -1,7 +1,7 @@
 # P2.5: Failure Taxonomy, Retry Ownership, and Cancellation (MVP Slice)
 
 **Stage**: P2.5  
-**Status**: Proposed (re-scoped on 2026-02-14)  
+**Status**: Complete (MVP slice verified on 2026-02-14)  
 **Depends on**: P2.1, P2.2, P2.3, P2.4
 
 ## Purpose
@@ -9,6 +9,29 @@
 Define only the minimum shared failure contract needed so equivalent failures produce equivalent behavior across apps today.
 
 P2.1 remains the source of truth for lifecycle/cancel fences. This stage adds a small, explicit failure-code and retry-ownership contract on top of existing behavior.
+
+## Implementation Progress (2026-02-14)
+
+Completed:
+
+1. Added canonical failure-code contract to SDK:
+   - `FailureCode` vocabulary with stable string mapping/parsing.
+2. Added retry ownership helper contract to SDK:
+   - deterministic single-owner mapping (`Adapter` vs `Plan` vs `Reducer`).
+3. Added SDK helper constructors for canonicalized failure payloads:
+   - `RunFailed` event helper,
+   - tool-call failed status helper.
+4. Added SDK unit coverage for:
+   - code round-trip/parsing,
+   - single-owner retry mapping,
+   - canonical payload construction.
+5. Hardened CLI trace diagnosis classification:
+   - explicit `invariant_violation`,
+   - fallback `unknown_failure` for generic plan errors.
+6. Added CLI unit coverage for deny/cap/timeout/error/invariant classification mappings.
+7. Confirmed existing deterministic cancellation/fan-out/replay coverage remains active via:
+   - `10-agent-session` smoke fixture (cancel + stale + fan-in),
+   - host replay classification test.
 
 ## Already In Place
 
