--- a/roadmap/v0.10-agent-sdk/p2.6-sdk-conformance-live-smoke.md
+++ b/roadmap/v0.10-agent-sdk/p2.6-sdk-conformance-live-smoke.md
@@ -1,40 +1,54 @@
 # P2.6: SDK Conformance Harness and Live LLM Smoke
 
 **Stage**: P2.6  
-**Status**: Proposed  
+**Status**: In progress (deterministic conformance slice landed on 2026-02-14)  
 **Depends on**: P2.1, P2.2, P2.3, P2.4, P2.5
 
 ## Purpose
 
-Close P2 with behavioral proof for Agent SDK flows in `crates/aos-smoke`, including real-provider checks.
+Close P2 with behavioral proof for Agent SDK flows in `crates/aos-smoke`, while keeping core trace/kernel conformance in the core lane.
 
 Demiurge migration is explicitly deferred to P3 (`roadmap/v0.10-agent-sdk/p3-demiurge-refactor.md`).
 
-## Scope
+## Implementation Progress (2026-02-14)
 
-1. Define fixture partitioning in `crates/aos-smoke`:
-   - **Core kernel/system fixtures**: `00`-`09`.
-   - **Agent SDK conformance fixtures**: `10+`.
-   - Keep one runner (`aos-smoke`) and make fixture grouping visible in fixture docs and CLI output.
-2. Define deterministic SDK conformance matrix (`10+`, CI-gated):
+Completed:
+
+1. Fixture taxonomy and CLI lane split were updated:
+   - core/kernel/system lane is now `00`-`19`,
+   - Agent SDK lane is now `20+`,
+   - `aos-smoke all` runs core lane only,
+   - `aos-smoke all-agent` runs Agent SDK lane only.
+2. Fixture renumbering and ownership alignment landed:
+   - `10-agent-session` moved to `20-agent-session`,
+   - `11-agent-failure-classification` moved/renamed to `10-trace-failure-classification`.
+3. Deterministic Agent SDK conformance coverage is active in `20-agent-session`:
    - no-tool completion,
-   - tool call roundtrip,
-   - parallel tool fan-out/fan-in,
-   - loop-cap detection (`max_steps_per_run`),
+   - tool batch roundtrip and settle ordering,
+   - high-contention fan-out/fan-in behavior,
    - cancellation with stale late receipts,
-   - policy/cap denial classification,
-   - adapter timeout/error classification,
-   - unknown provider/model start rejection,
-   - provider/model change across runs with no in-run drift (`active_run_config` immutable per run).
-3. Add replay-oriented assertions for deterministic lane:
-   - replay from genesis,
-   - byte-identical terminal snapshots/classification.
-4. Add optional live-provider SDK lane (`10+`, opt-in):
+   - loop-cap (`max_steps_per_run`) failure path,
+   - unknown provider/model run-start rejection without state mutation,
+   - immutable `active_run_config` during run and provider/model updates across runs.
+4. Failure-classification conformance landed as a core trace fixture in `10-trace-failure-classification`:
+   - `policy_denied`,
+   - `capability_denied`,
+   - `adapter_timeout`,
+   - `adapter_error`.
+5. Validation is done through existing trace surfaces, not new primitives:
+   - shared host trace query/diagnosis helpers are reused by daemon/CLI/smoke paths,
+   - fixture assertions are based on `trace_get` + `trace_diagnose` output.
+6. Roadmap/docs references were updated to the new numbering (`20-agent-session`, `10-trace-failure-classification`).
+
+## Remaining Scope
+
+1. Add optional live-provider SDK lane (`20+`, opt-in):
    - provider families: `openai/*`, `anthropic/*`, `openai-compatible/*`,
    - at least one no-tool and one tool-call scenario per provider family,
    - wiring/interop verification only (not replay-parity gating).
-5. Add repository-level boundary guard:
+2. Add repository-level boundary guard:
    - confirm no SDK-local ownership of `sys/Llm*` schema definitions.
+3. Publish final P2 closure report once live lane + boundary guard are landed.
 
 ## Non-Goals
 
@@ -45,8 +59,8 @@ Demiurge migration is explicitly deferred to P3 (`roadmap/v0.10-agent-sdk/p3-dem
 
 ## Deliverables
 
-1. Updated `aos-smoke` fixture taxonomy showing `00`-`09` core vs `10+` SDK conformance.
-2. SDK conformance fixture suite in `10+` with deterministic replay checks.
+1. Updated `aos-smoke` fixture taxonomy showing `00`-`19` core vs `20+` SDK conformance.
+2. SDK conformance fixture suite in `20+` with deterministic replay checks.
 3. Live-provider SDK smoke profile documented with required env/credentials and provider matrix.
 4. Repo conformance check for `sys/Llm*` ownership boundary.
 5. Final P2 closure report mapped to stage exit gates.
@@ -61,10 +75,11 @@ Demiurge migration is explicitly deferred to P3 (`roadmap/v0.10-agent-sdk/p3-dem
 
 ## Exit Criteria
 
-1. Deterministic SDK conformance lane (`10+`) passes with replay parity.
-2. Core fixture lane (`00`-`09`) remains green after SDK conformance additions.
-3. Live-provider SDK lane exists, is documented, and can be run opt-in against required provider families.
-4. Unknown provider/model deterministically fails run start with no partial activation.
-5. Provider/model updates affect only subsequent runs; active runs keep immutable `active_run_config`.
-6. Repository checks confirm `sys/Llm*` ownership stays in core crates/spec assets, not SDK AIR assets.
-7. P2 closure report is published and all prior stage exit criteria remain green.
+1. Deterministic SDK conformance lane (`20+`) passes with replay parity.
+2. Core fixture lane (`00`-`19`) remains green after SDK conformance additions.
+3. Core trace classification fixture (`10-trace-failure-classification`) remains green in `all`.
+4. Live-provider SDK lane exists, is documented, and can be run opt-in against required provider families.
+5. Unknown provider/model deterministically fails run start with no partial activation.
+6. Provider/model updates affect only subsequent runs; active runs keep immutable `active_run_config`.
+7. Repository checks confirm `sys/Llm*` ownership stays in core crates/spec assets, not SDK AIR assets.
+8. P2 closure report is published and all prior stage exit criteria remain green.
