--- a/roadmap/v0.10-agent-sdk/p2.6-sdk-conformance-live-smoke.md
+++ b/roadmap/v0.10-agent-sdk/p2.6-sdk-conformance-live-smoke.md
@@ -39,13 +39,18 @@ Completed:
    - shared host trace query/diagnosis helpers are reused by daemon/CLI/smoke paths,
    - fixture assertions are based on `trace_get` + `trace_diagnose` output.
 6. Roadmap/docs references were updated to the new numbering (`20-agent-session`, `10-trace-failure-classification`).
+7. Opt-in live Agent SDK smoke command landed in `aos-smoke`:
+   - `aos-smoke agent-live` (default OpenAI Responses),
+   - `aos-smoke agent-live --provider anthropic`,
+   - flow uses secret-injected API keys (`defsecret`-based),
+   - validates tool orchestration (`echo_payload`, `sum_pair`) + follow-up turn,
+   - ends with replay verification.
 
 ## Remaining Scope
 
-1. Add optional live-provider SDK lane (`20+`, opt-in):
-   - provider families: `openai/*`, `anthropic/*`, `openai-compatible/*`,
-   - at least one no-tool and one tool-call scenario per provider family,
-   - wiring/interop verification only (not replay-parity gating).
+1. Optional live-provider SDK lane follow-up:
+   - current smoke lane covers `openai/*` and `anthropic/*` via `agent-live`,
+   - add `openai-compatible/*` coverage if required in this stage.
 2. Add repository-level boundary guard:
    - confirm no SDK-local ownership of `sys/Llm*` schema definitions.
 3. Publish final P2 closure report once live lane + boundary guard are landed.
