renamed to chat live

--- a/roadmap/v0.10-agent-sdk/p2.6-sdk-conformance-live-smoke.md
+++ b/roadmap/v0.10-agent-sdk/p2.6-sdk-conformance-live-smoke.md
@@ -40,8 +40,8 @@ Completed:
    - fixture assertions are based on `trace_get` + `trace_diagnose` output.
 6. Roadmap/docs references were updated to the new numbering (`20-agent-session`, `10-trace-failure-classification`).
 7. Opt-in live Agent SDK smoke command landed in `aos-smoke`:
-   - `aos-smoke agent-live` (default OpenAI Responses),
-   - `aos-smoke agent-live --provider anthropic`,
+   - `aos-smoke chat-live` (default OpenAI Responses),
+   - `aos-smoke chat-live --provider anthropic`,
    - flow uses secret-injected API keys (`defsecret`-based),
    - validates tool orchestration (`echo_payload`, `sum_pair`) + follow-up turn,
    - ends with replay verification.
@@ -49,7 +49,7 @@ Completed:
 ## Remaining Scope
 
 1. Optional live-provider SDK lane follow-up:
-   - current smoke lane covers `openai/*` and `anthropic/*` via `agent-live`,
+   - current smoke lane covers `openai/*` and `anthropic/*` via `chat-live`,
    - add `openai-compatible/*` coverage if required in this stage.
 2. Add repository-level boundary guard:
    - confirm no SDK-local ownership of `sys/Llm*` schema definitions.
