--- a/roadmap/v0.10-agent-sdk/p2.6-sdk-conformance-live-smoke.md
+++ b/roadmap/v0.10-agent-sdk/p2.6-sdk-conformance-live-smoke.md
@@ -39,17 +39,19 @@ Completed:
    - shared host trace query/diagnosis helpers are reused by daemon/CLI/smoke paths,
    - fixture assertions are based on `trace_get` + `trace_diagnose` output.
 6. Roadmap/docs references were updated to the new numbering (`20-agent-session`, `10-trace-failure-classification`).
-7. Opt-in live Agent SDK smoke command landed in `aos-smoke`:
+7. Opt-in live Agent SDK smoke commands landed in `aos-smoke`:
    - `aos-smoke chat-live` (default OpenAI Responses),
    - `aos-smoke chat-live --provider anthropic`,
-   - flow uses secret-injected API keys (`defsecret`-based),
-   - validates tool orchestration (`echo_payload`, `sum_pair`) + follow-up turn,
-   - ends with replay verification.
+   - `aos-smoke agent-live` (SDK session-event loop + iterative tool traversal),
+   - `aos-smoke agent-live --provider anthropic`,
+   - `chat-live` flow uses secret-injected API keys (`defsecret`-based),
+   - `agent-live` uses `aos.agent/*` schemas and `aos-agent-sdk` reducer/helpers with multi-step tool batches,
+   - both validate primary + follow-up turns and end with replay verification.
 
 ## Remaining Scope
 
 1. Optional live-provider SDK lane follow-up:
-   - current smoke lane covers `openai/*` and `anthropic/*` via `chat-live`,
+   - current smoke lane covers `openai/*` and `anthropic/*` via `chat-live` and `agent-live`,
    - add `openai-compatible/*` coverage if required in this stage.
 2. Add repository-level boundary guard:
    - confirm no SDK-local ownership of `sys/Llm*` schema definitions.
