--- a/roadmap/v0.10-agent-sdk/p2.6-sdk-conformance-live-smoke.md
+++ b/roadmap/v0.10-agent-sdk/p2.6-sdk-conformance-live-smoke.md
@@ -1,7 +1,7 @@
 # P2.6: SDK Conformance Harness and Live LLM Smoke
 
 **Stage**: P2.6  
-**Status**: In progress (deterministic conformance slice landed on 2026-02-14)  
+**Status**: Complete (closed on 2026-02-14)  
 **Depends on**: P2.1, P2.2, P2.3, P2.4, P2.5
 
 ## Purpose
@@ -47,15 +47,16 @@ Completed:
    - `chat-live` flow uses secret-injected API keys (`defsecret`-based),
    - `agent-live` uses `aos.agent/*` schemas and `aos-agent-sdk` reducer/helpers with multi-step tool batches,
    - both validate primary + follow-up turns and end with replay verification.
+8. Final P2 closure report was published:
+   - see `roadmap/v0.10-agent-sdk/p2-closure-report.md`.
 
-## Remaining Scope
+## Post-Close Follow-Ups (Non-Blocking)
 
 1. Optional live-provider SDK lane follow-up:
    - current smoke lane covers `openai/*` and `anthropic/*` via `chat-live` and `agent-live`,
    - add `openai-compatible/*` coverage if required in this stage.
-2. Add repository-level boundary guard:
-   - confirm no SDK-local ownership of `sys/Llm*` schema definitions.
-3. Publish final P2 closure report once live lane + boundary guard are landed.
+2. Repository-level boundary guard for `sys/Llm*` ownership:
+   - intentionally deferred by decision for P2 close; track as follow-up hardening.
 
 ## Non-Goals
 
@@ -69,7 +70,7 @@ Completed:
 1. Updated `aos-smoke` fixture taxonomy showing `00`-`19` core vs `20+` SDK conformance.
 2. SDK conformance fixture suite in `20+` with deterministic replay checks.
 3. Live-provider SDK smoke profile documented with required env/credentials and provider matrix.
-4. Repo conformance check for `sys/Llm*` ownership boundary.
+4. Repo conformance check for `sys/Llm*` ownership boundary (deferred follow-up).
 5. Final P2 closure report mapped to stage exit gates.
 
 ## Implementation Notes
@@ -88,5 +89,5 @@ Completed:
 4. Live-provider SDK lane exists, is documented, and can be run opt-in against required provider families.
 5. Unknown provider/model deterministically fails run start with no partial activation.
 6. Provider/model updates affect only subsequent runs; active runs keep immutable `active_run_config`.
-7. Repository checks confirm `sys/Llm*` ownership stays in core crates/spec assets, not SDK AIR assets.
-8. P2 closure report is published and all prior stage exit criteria remain green.
+7. Repository boundary guard is explicitly deferred as a non-blocking follow-up for this close.
+8. P2 closure report is published and all other stage exit criteria remain green.
