--- a/roadmap/v0.10-agent-sdk/p3.1-defs-sync.md
+++ b/roadmap/v0.10-agent-sdk/p3.1-defs-sync.md
@@ -17,7 +17,7 @@ We implemented defs import at tooling level:
 2. CLI resolves import roots (path or cargo package).
 3. `manifest_loader` loads multiple AIR sources:
    - one primary world AIR source (contains manifest),
-   - zero or more import sources (defs-only; no manifest allowed).
+   - zero or more import sources (manifest nodes ignored; defs merged).
 4. Duplicate defs are merged by name only when content hash is identical.
 5. Conflicting duplicate defs (same name, different content hash) are hard errors.
 
@@ -34,10 +34,10 @@ No AIR schema/kernel protocol changes were made.
 
 ```json
 {
-  "air": {
+      "air": {
     "dir": "air",
     "imports": [
-      { "path": "../sdk/air/exports/session-contracts" }
+      { "path": "../sdk/air" }
     ]
   }
 }
@@ -55,7 +55,7 @@ No AIR schema/kernel protocol changes were made.
       {
         "cargo": {
           "package": "aos-agent-sdk",
-          "air_dir": "air/exports/session-contracts",
+          "air_dir": "air",
           "manifest_path": "../../Cargo.toml"
         }
       }
@@ -105,7 +105,7 @@ Primary AIR root:
 Import AIR roots:
 
 1. Loaded directly from the provided root (recursive JSON walk).
-2. Must not contain any `manifest` node.
+2. `manifest` nodes in imports are ignored (only the primary world manifest is used).
 
 Def merge:
 
@@ -120,20 +120,19 @@ Other existing invariants remain unchanged:
 2. Manifest refs are patched to actual hashes.
 3. Manifest validation continues after merge.
 
-## SDK Export Layout
+## SDK AIR Layout
 
-Added defs-only SDK export:
+SDK defs are imported directly from:
 
-1. `crates/aos-agent-sdk/air/exports/session-contracts/defs.air.json`
-2. `crates/aos-agent-sdk/air/exports/session-contracts/README.md`
+1. `crates/aos-agent-sdk/air`
 
-This export currently contains `aos.agent/*` `defschema` nodes (no manifest).
+No parallel `air/exports/*` mirror is required.
 
 ## World Migrations Done
 
 ### `crates/aos-smoke/fixtures/22-agent-live`
 
-1. Added `aos.sync.json` with cargo import of `aos-agent-sdk` export.
+1. Added `aos.sync.json` with cargo import of `aos-agent-sdk` AIR root.
 2. Deleted local duplicate `air/schemas.air.json`.
 3. Updated smoke harness to pass import roots when loading fixture AIR.
 
@@ -157,6 +156,6 @@ This export currently contains `aos.agent/*` `defschema` nodes (no manifest).
 
 ## Current Limitations / Follow-ups
 
-1. `air.imports[].lock` is not validated yet.
+1. `air.imports[].lock` validation is implemented in P1 plan-import work (warn locally, fail in CI/strict mode).
 2. Cargo import only resolves packages visible in selected `cargo metadata` graph; if package is not discoverable there, import fails.
-3. SDK export currently copies defs as static JSON; no automated export generation pipeline yet.
+3. Importing full AIR roots may pull in defs a world does not use yet; this is acceptable in greenfield but may need pruning rules later.
