--- a/roadmap/v0.10.1-agent-sdk/p3.2-agent-prompts.md
+++ b/roadmap/v0.10.1-agent-sdk/p3.2-agent-prompts.md
@@ -110,7 +110,7 @@ Tool fields are specified in `p3.3-agent-tools.md`.
 1. prompt pack name -> file path mapping,
 2. defaults.
 
-Convention-first fallback remains valid:
+Convention-first path is primary:
 
 1. `prompts/packs/<pack>.json`
 
@@ -123,13 +123,12 @@ No extra prompt metadata layer is required to run.
 3. Direct prompt refs affect runtime only when selected by a new run request.
 4. Reducers still do not execute external effects for prompt resolution.
 
-## Migration Plan
+## Implementation Focus
 
-1. Keep existing workspace prompt behavior unchanged.
-2. Add direct prompt ref fields to SDK contracts/schemas.
-3. Update prompt materialization helper:
+1. Add direct prompt ref fields to SDK contracts/schemas.
+2. Update prompt materialization helper:
    - prefer direct prompt refs over workspace prompt pack ref.
-4. Add tests for:
+3. Add tests for:
    - workspace mode,
    - direct mode,
    - precedence when both are present.
