--- a/roadmap/v0.10.1-agent-sdk/p3.3-agent-tools.md
+++ b/roadmap/v0.10.1-agent-sdk/p3.3-agent-tools.md
@@ -13,7 +13,7 @@ Define where tools live and how they execute safely:
 2. runtime binding from `tool_name` to intents/plans/effects,
 3. capability/policy enforcement boundaries.
 
-This document is tool-only. Prompt concerns remain in `p3.2-agent-ws.md`.
+This document is tool-only. Prompt concerns remain in `p3.2-agent-prompts.md`.
 
 ## Core Answer: Where Should Tools Be Defined?
 
@@ -121,16 +121,15 @@ For v0.10:
 
 1. allow direct `tools/catalogs/<name>.json` as the primary convention,
 2. keep `agent.workspace.json` catalog map as optional convenience,
-3. keep legacy scan fallback only as a migration bridge, then remove.
+3. do not carry ad hoc workspace directory scan paths in the new contract.
 
 This gives low friction while keeping deterministic lookup.
 
-## Migration Plan
+## Implementation Focus
 
-1. Move tool-specific design/implementation tracking from `p3.2` to this doc.
-2. Keep existing workspace catalog flow working.
-3. Add direct `tool_refs` config path for no-workspace agents.
-4. Introduce deterministic binding coverage checks in SDK/Demiurge reducers.
+1. Add direct `tool_refs` config path for no-workspace agents.
+2. Introduce deterministic binding coverage checks in SDK/Demiurge reducers.
+3. Keep convention-first workspace catalog loading.
 
 ## Testing
 
