--- a/roadmap/v0.10.1-agent-sdk/p3.4-demiurge-refactor.md
+++ b/roadmap/v0.10.1-agent-sdk/p3.4-demiurge-refactor.md
@@ -33,10 +33,9 @@ But it is still app-specific and embeds patterns the SDK should own.
 
 ## Refactor Direction
 
-1. Keep shipping Demiurge while incrementally swapping internals to SDK primitives.
-2. Prefer compatibility shims first, then cleanup/breaking schema changes once SDK stabilizes.
-3. Treat Demiurge as the first major integration test for the new SDK.
-4. Adopt `aos.agent/*` as the core namespace and map existing `demiurge/*` flows onto it.
+1. Move Demiurge to SDK primitives in one refactor pass.
+2. Treat Demiurge as the first major integration test for the new SDK.
+3. Adopt `aos.agent/*` as the core namespace for runtime-facing contracts.
 
 ## Non-Goals (P3)
 
@@ -44,12 +43,11 @@ But it is still app-specific and embeds patterns the SDK should own.
 - Not the final coding-agent implementation.
 - Not final multi-world universe orchestration.
 
-## Proposed Migration Slices
+## Implementation Slices
 
 ### Slice 3.1: Event/schema alignment
-- Map existing Demiurge chat/tool events to `aos.agent/*` run/turn/action concepts.
-- Add adapter layer to translate old events to new internals where needed.
-- Keep existing UI flows operational.
+- Map Demiurge chat/tool events to `aos.agent/*` run/turn/action concepts.
+- Remove obsolete schema/event paths in the same change set.
 
 ### Slice 3.2: Reducer refactor
 - Replace bespoke loop fields/state transitions with SDK reducer helpers.
@@ -81,12 +79,6 @@ But it is still app-specific and embeds patterns the SDK should own.
   - compiler/build flows.
 - Keep each capability behind explicit caps/policy and validate traceability end-to-end.
 
-## Backward Compatibility Strategy
-
-- Short-term: tolerate mixed mode (legacy Demiurge events + SDK internals).
-- Mid-term: introduce versioned schemas for new contracts.
-- End of v0.10: deprecate legacy-only paths once shell/API clients are migrated.
-
 ## Wiring Invariants from Current Demiurge
 
 These invariants must be preserved during refactor to avoid regressions:
@@ -111,7 +103,7 @@ These invariants must be preserved during refactor to avoid regressions:
 - Demiurge core loop runs on SDK primitives rather than bespoke chat-only structures.
 - Existing core features (chat + tools + debug trace) remain functional.
 - At least one new agent behavior can be added in Demiurge with SDK extension points and minimal bespoke code.
-- Legacy pathways are either removed or clearly marked deprecated with migration notes.
+- Obsolete Demiurge-only schema/event pathways are removed.
 - Runtime behavior matches current working tool path semantics while moving naming/contracts to `aos.agent/*`.
 
 ## Open Questions
